[package]
name = "mushid"
version = "0.1.0"
edition = "2021"
description = ""
keywords = []
readme = "README.md"
license = "AGPL-3.0-only"
repository = ""
documentation = ""
authors = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mac_address = "1.1.4"
crc32c = "0.6"
