[package]
name = "mushid"
version = "0.0.2"
edition = "2021"
description = "a unique string generator."
keywords = ["unique-id", "token"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/tanveerraza789/mushid-rs"
authors = ["Tanveer Raza <tanveerraza789@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mac_address = "1.1.4"
crc32c = "0.6"
